--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 *.so
 *.dylib
 
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -19,3 +20,7 @@
 
 # Go workspace file
 go.work
+
+# Ignore specific file
+_*.go
+_test
